--- a/src/components/App.css
+++ b/src/components/App.css
@@ -15,7 +15,8 @@ body {
   background: #fff;
   margin: 150px 0 40px 0;
   position: relative;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1); */
+  box-shadow: 0px -1px 26px 6px rgba(0,0,0,0.04);
 }
 
 .app h1 {
@@ -41,16 +42,19 @@ body {
   margin: 0;
   padding: 0;
   list-style: none;
+  text-align: left;
 }
 
 .todo-list li {
   position: relative;
   font-size: 24px;
   border-bottom: 1px solid #ededed;
+  background: white;
 }
 
 .todo-list li:last-child {
   border-bottom: none;
+  box-shadow: 0px 11px 10px -6px rgba(0,0,0,0.036);
 }
 
 .todo-list li .toggle {
@@ -161,4 +165,65 @@ button:hover {
 
 .todo-list li:hover .destroy {
   display: block;
+}
+
+.lds-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.lds-ellipsis {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-ellipsis div {
+  position: absolute;
+  top: 33px;
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  background: #ebd8d7;
+  animation-timing-function: cubic-bezier(0, 1, 1, 0);
+}
+.lds-ellipsis div:nth-child(1) {
+  left: 8px;
+  animation: lds-ellipsis1 0.2s infinite;
+}
+.lds-ellipsis div:nth-child(2) {
+  left: 8px;
+  animation: lds-ellipsis2 0.2s infinite;
+}
+.lds-ellipsis div:nth-child(3) {
+  left: 32px;
+  animation: lds-ellipsis2 0.2s infinite;
+}
+.lds-ellipsis div:nth-child(4) {
+  left: 56px;
+  animation: lds-ellipsis3 0.2s infinite;
+}
+@keyframes lds-ellipsis1 {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes lds-ellipsis3 {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+@keyframes lds-ellipsis2 {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(24px, 0);
+  }
 }
